<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, Main!</string>
    <string name="app_name">Moishd!</string>
    <string name="refresh">Refresh</string>
    <string name="get_all_users">All users</string>
    <string name="get_all_facebook_friends">Facebook friends</string>
    <string name="get_all_nearby_users">Nearby users</string>
    <string name="own_statistics">Rank and Trophies</string>
    <string name="logout">Logout</string>
<string name="top_five_ranked">Top five ranked games</string>
<string name="top_five_popular">Top five popular games</string>
</resources>
